--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "plexi.http",
 	"description": "plexi plugin for http service",
-	"version": "0.0.6",
+	"version": "0.1.0-alpha1",
 	"main": "activator.js",
 	"dependencies": {
 		"express": "3.x",		
-		"node-uuid": "*"
+		"node-uuid": "*",
+		"wrench": "*"
 	},
 	"plexi": {
 		"activator": "activator.js"
