--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "plexi.http",
 	"description": "plexi plugin for http service",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"main": "activator.js",
 	"dependencies": {
 		"express": "3.x",		
@@ -10,5 +10,10 @@
 	},
 	"plexi": {
 		"activator": "activator.js"
-	}
+	},
+	
+	"author": "joje <joje.attrs@gmail.com>",
+	"homepage": "https://github.com/attrs/plexi.http",
+	"repository": "attrs/plexi.http",
+	"license": "MIT"
 }
