--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-	"name": "plexi.http",
-	"description": "plexi plugin for http service",
-	"version": "0.1.3",
-	"main": "activator.js",
-	"dependencies": {
-		"express": "3.x",		
-		"node-uuid": "~1.4.1",
-		"wrench": "~1.5.8",
-		"bower": "~1.3.11"
-	},
-	"plexi": {
-		"activator": "activator.js"
-	},
-	
-	"author": "joje <joje.attrs@gmail.com>",
-	"homepage": "https://github.com/attrs/plexi.http",
-	"repository": "attrs/plexi.http",
-	"license": "MIT"
+  "name": "plexi.http",
+  "description": "plexi plugin for http service",
+  "version": "0.1.3",
+  "main": "src/main.js",
+  "scripts": {
+	"start": "node src/startup.js",
+    "test": "jasmine-node --test-dir test --watch src *.json --autotest --color"
+  },
+  "dependencies": {
+    "express": "^4.x",
+    "uuid": "~2.0.1",
+    "wrench": "~1.5.8",
+    "bower": "~1.3.11",
+    "http-proxy": "^1.7.1",
+    "vhost": "^3.0.0",
+    "multer": "^0.1.6",
+    "body-parser": "^0.10.0",
+    "serve-favicon": "^2.1.7",
+    "method-override": "^2.3.0",
+    "compression": "^1.2.1",
+    "cookie-session": "^1.1.0",
+    "cookie-parser": "^1.3.3",
+    "csurf": "^1.6.3"
+  },
+  "devDependencies": {
+    "request": "^2.49.0"
+  },
+  "plexi": {
+    "activator": "src/activator.js"
+  },
+  "author": "joje <joje.attrs@gmail.com>",
+  "homepage": "https://github.com/attrs/plexi.http",
+  "repository": "attrs/plexi.http",
+  "license": "MIT"
 }
