--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "http-proxy": "^1.7.1",
     "vhost": "^3.0.0",
     "multer": "^0.1.6",
-    "body-parser": "^0.10.0",
+    "body-parser": "^1.10.0",
     "serve-favicon": "^2.1.7",
     "method-override": "^2.3.0",
     "compression": "^1.2.1",
     "cookie-session": "^1.1.0",
+	"express-session": "^1.7.2",
     "cookie-parser": "^1.3.3",
-    "csurf": "^1.6.3"
+    "csurf": "^1.6.3",
+    "colors": "^1.0.3"
   },
   "devDependencies": {
     "request": "^2.49.0"
