--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "version": "0.1.3",
   "main": "src/main.js",
   "scripts": {
-	"start": "node test/startup.js",
+    "start": "node test/startup.js",
     "test": "jasmine-node --test-dir test --watch src *.json --autotest --color"
   },
   "dependencies": {
-    "express": "^4.x",
-    "uuid": "~2.0.1",
-    "wrench": "~1.5.8",
-    "bower": "~1.3.11",
-    "http-proxy": "^1.7.1",
-    "vhost": "^3.0.0",
-    "multer": "^0.1.6",
     "body-parser": "^1.10.0",
-    "serve-favicon": "^2.1.7",
-    "method-override": "^2.3.0",
+    "bower": "~1.3.11",
+    "colors": "^1.0.3",
     "compression": "^1.2.1",
-    "cookie-session": "^1.1.0",
-	"express-session": "^1.7.2",
     "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.1.0",
     "csurf": "^1.6.3",
-    "colors": "^1.0.3"
+    "express": "^4.x",
+    "express-session": "^1.7.2",
+    "http-proxy": "^1.8.1",
+    "method-override": "^2.3.0",
+    "morgan": "^1.5.1",
+    "multer": "^0.1.6",
+    "serve-favicon": "^2.1.7",
+    "uuid": "~2.0.1",
+    "vhost": "^3.0.0",
+    "wrench": "~1.5.8"
   },
   "devDependencies": {
     "request": "^2.49.0"
