--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.7.2",
     "http-proxy": "^1.8.1",
     "method-override": "^2.3.0",
+    "minimatch": "^2.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.6",
     "serve-favicon": "^2.1.7",
@@ -30,7 +31,11 @@
     "request": "^2.49.0"
   },
   "plexi": {
-    "activator": "src/activator.js"
+    "serviceAs": "http",
+    "activator": "src/activator.js",
+	  "dependencies": {
+		  "ui-aliens": "*"
+	  }
   },
   "author": "joje <joje.attrs@gmail.com>",
   "homepage": "https://github.com/attrs/plexi.http",
