--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "version": "0.1.3",
   "main": "src/main.js",
   "scripts": {
-    "start": "node test/startup.js",
+    "postinstall": "node node_modules/bower/bin/bower install",
     "test": "jasmine-node --test-dir test --watch src *.json --autotest --color"
+  },
+  "bin": {
+    "plexi.http": "node bin/server.js"
   },
   "dependencies": {
     "body-parser": "^1.10.0",
     "bower": "~1.3.11",
+    "chalk": "^0.5.1",
     "colors": "^1.0.3",
     "compression": "^1.2.1",
     "cookie-parser": "^1.3.3",
@@ -17,7 +21,6 @@
     "csurf": "^1.6.3",
     "express": "^4.x",
     "express-session": "^1.7.2",
-    "http-proxy": "^1.8.1",
     "method-override": "^2.3.0",
     "minimatch": "^2.0.1",
     "morgan": "^1.5.1",
