--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "csurf": "^1.6.3",
     "express": "^4.x",
     "express-session": "^1.7.2",
+    "express-xml-bodyparser": "0.0.6",
     "method-override": "^2.3.0",
     "minimatch": "^2.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.6",
     "serve-favicon": "^2.1.7",
+    "type-is": "^1.5.6",
     "uuid": "~2.0.1",
     "vhost": "^3.0.0",
     "wrench": "^1.5.8"
