--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.1.6",
   "main": "src/main.js",
   "scripts": {
-    "postinstall": "node node_modules/bower/bin/bower install",
     "test": "jasmine-node --test-dir test --watch src *.json --autotest --color"
   },
   "bin": {
     "plexi.http": "bin/server.js"
   },
   "dependencies": {
+    "attrs.util": "^0.1.0",
     "body-parser": "^1.10.0",
-    "bower": "~1.3.11",
     "chalk": "^0.5.1",
     "colors": "^1.0.3",
     "compression": "^1.2.1",
@@ -36,11 +35,8 @@
     "request": "^2.49.0"
   },
   "plexi": {
-    "serviceAs": "http",
-    "activator": "src/activator.js",
-    "dependencies": {
-      "plexi.workbench": "*"
-    }
+    "singleton": true,
+    "activator": "src/activator.js"
   },
   "author": "joje <joje.attrs@gmail.com>",
   "homepage": "https://github.com/attrs/plexi.http",
