--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "chalk": "^0.5.1",
     "colors": "^1.0.3",
     "compression": "^1.2.1",
+    "consolidate": "^0.11.0",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.1.0",
     "csurf": "^1.6.3",
+    "ejs": "^2.2.4",
     "express": "^4.x",
     "express-session": "^1.7.2",
     "express-xml-bodyparser": "0.0.6",
+    "haml": "^0.4.3",
+    "jade": "^1.9.2",
     "method-override": "^2.3.0",
     "minimatch": "^2.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.6",
     "serve-favicon": "^2.1.7",
+    "swig": "^1.4.2",
     "type-is": "^1.5.6",
     "uuid": "~2.0.1",
     "vhost": "^3.0.0",
